--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-flask==3.0.0
-flask-socketio==5.3.6
-python-socketio==5.9.0
-eventlet==0.33.3
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
-gunicorn==21.2.0
+flask>=2.0.0
+flask-socketio>=5.0.0
+python-socketio>=5.0.0
+eventlet>=0.33.0
+requests>=2.25.0
+beautifulsoup4>=4.9.0
+gunicorn>=20.0.0
